added sound + create build

--- a/settings/project.json
+++ b/settings/project.json
@@ -10,12 +10,31 @@
   ],
   "excluded-modules": [
     "Collider",
+    "Dynamic Atlas",
     "DragonBones",
+    "Mask",
+    "Mesh",
+    "MotionStreak",
+    "NodePool",
+    "Native Socket",
     "Physics",
+    "PageView",
+    "PageViewIndicator",
+    "ProgressBar",
+    "RichText",
+    "Renderer Texture",
+    "Slider",
+    "ScrollBar",
+    "ScrollView",
     "Spine Skeleton",
+    "StudioComponent",
+    "Toggle",
+    "VideoPlayer",
+    "3D",
     "3D Primitive",
     "3D Physics/cannon.js",
-    "3D Physics/Builtin"
+    "3D Physics/Builtin",
+    "3D Particle"
   ],
   "preview-port": 7456,
   "design-resolution-width": 960,
